--- a/analog-clock.css
+++ b/analog-clock.css
@@ -1,16 +1,125 @@
+/*body styling*/
 body {
-    background: rgb(13, 186, 230);
-    color: #333;
-    margin-top: 50px;
-    font-family: Helvetica, sans-serif;
-  }
-  
-  #clock {
-    background: #fff;
-    border: 15px solid #222;
-    border-radius: 50%;
-    position: relative;
-    width: 320px;
-    height: 320px;
-    margin: auto;
-  }
+  background: rgb(13, 186, 230);
+  color: #333;
+  margin-top: 50px;
+  font-family: Helvetica, sans-serif;
+}
+
+/*styling of clock container*/
+#clock {
+  background: #fff;
+  border: 15px solid #222;
+  border-radius: 50%;
+  position: relative;
+  width: 320px;
+  height: 320px;
+  margin: auto;
+}
+
+/*complicated styling to place clock hours in their correct positions*/
+ul {
+  list-style: none;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  text-align: center;
+}
+
+li {
+  position: absolute;
+  transform-origin: 50% 100%;
+  height: 160px;
+}
+
+.hours {
+  left: 120px;
+  font-size: 23.3333333333px;
+  letter-spacing: -1.6px;
+  line-height: 45px;
+}
+.hours li {
+  width: 80px;
+}
+.hours span {
+  display: block;
+}
+/* The following code has helped to design the 1 number*/
+.hours li:nth-of-type(1) {
+  transform: rotate(30deg);
+}
+.hours li:nth-of-type(1) span {
+  transform: rotate(-30deg);
+}
+.hours li:nth-of-type(2) {
+  transform: rotate(60deg);
+}
+.hours li:nth-of-type(2) span {
+  transform: rotate(-60deg);
+}
+/* The following code has helped to design the 3 number*/
+.hours li:nth-of-type(3) {
+  transform: rotate(90deg);
+}
+.hours li:nth-of-type(3) span {
+  transform: rotate(-90deg);
+}
+.hours li:nth-of-type(4) {
+  transform: rotate(120deg);
+}
+.hours li:nth-of-type(4) span {
+  transform: rotate(-120deg);
+}
+/* The following code has helped to design the 5 number*/
+.hours li:nth-of-type(5) {
+  transform: rotate(150deg);
+}
+.hours li:nth-of-type(5) span {
+  transform: rotate(-150deg);
+}
+.hours li:nth-of-type(6) {
+  transform: rotate(180deg);
+}
+.hours li:nth-of-type(6) span {
+  transform: rotate(-180deg);
+}
+/* The following code has helped to design the 7 number*/
+.hours li:nth-of-type(7) {
+  transform: rotate(210deg);
+}
+.hours li:nth-of-type(7) span {
+  transform: rotate(-210deg);
+}
+.hours li:nth-of-type(8) {
+  transform: rotate(240deg);
+}
+.hours li:nth-of-type(8) span {
+  transform: rotate(-240deg);
+}
+/* The following code has helped to design the 9 number*/
+.hours li:nth-of-type(9) {
+  transform: rotate(270deg);
+}
+.hours li:nth-of-type(9) span {
+  transform: rotate(-270deg);
+}
+.hours li:nth-of-type(10) {
+  transform: rotate(300deg);
+}
+.hours li:nth-of-type(10) span {
+  transform: rotate(-300deg);
+}
+/* The following code has helped to design the 11 number*/
+.hours li:nth-of-type(11) {
+  transform: rotate(330deg);
+}
+.hours li:nth-of-type(11) span {
+  transform: rotate(-330deg);
+}
+.hours li:nth-of-type(12) {
+  transform: rotate(360deg);
+}
+.hours li:nth-of-type(12) span {
+  transform: rotate(-360deg);
+}
